# long-mem-agent

./: .gitignore  README.md  pyproject.toml
configs/: claude-sonnet.yaml  finetuned-model.yaml  gpt4o-mini.yaml  ollama-llama.yaml
scripts/: quick_test.py  run_evaluation.py  run_experiment.py
src/locomo_agent/: __init__.py  agent.py  agent_v2.py  cli.py  config.py  data_loader.py  data_models.py  evaluator.py  llm_client.py  metrics.py  retriever.py
